Fixup CLI help